loopfor.LoopCourseForest.scala.error
Erreur de compilation :
LoopCourseForest:1: error: not found: value Direction
setDirection(Direction.EAST) 
             ^